--- a/DSPublishing/DSPublishing.html
+++ b/DSPublishing/DSPublishing.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>D.S. Publishing</h1>
+<img src="DSPublishing1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,7 +18,24 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SelectDetective/SelectDetective1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DSPublishing18.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -28,24 +45,24 @@ D.S. Publishing Company, Inc. entered the publishing market around 1941, with se
 </p><p>
 Titles
 </p><p>
-<li>Breeze Lawson, Sky Sheriff (1948)
-<li>Circus Comics (1948)
-<li>Elsie the Cow Comics (1949)
-<li>Elsie the Cow Comics for Boys and Girls (1957)
-<li>Everyday Birthday Fun with Elsie the Cow (1957)
-<li>Exposed (1948)
-<li>Gangsters Can't Win (1948)
-<li>Jeff Jordan, U.S. Agent (1947)
-<li>Let's Pretend (1950)
-<li>Moe &amp; Shmoe (1948)
-<li>Outlaws (1948)
-<li>Pay-Off (1948)
-<li>Public Enemies (1948)
-<li>Roundup (1948)
+<li><a href="DSPublishing1.jpg">Breeze Lawson, Sky Sheriff</a> (1948)
+<li><a href="DSPublishing2.jpg">Circus Comics</a> (1948)
+<li><a href="DSPublishing3.jpg">Elsie the Cow Comics</a> (1949)
+<li><a href="DSPublishing4.jpg">Elsie the Cow Comics for Boys and Girls</a> (1957)
+<li><a href="DSPublishing5.jpg">Everyday Birthday Fun with Elsie the Cow</a> (1957)
+<li><a href="DSPublishing6.jpg">Exposed</a> (1948)
+<li><a href="DSPublishing7.jpg">Gangsters Can't Win</a> (1948)
+<li><a href="DSPublishing8.jpg">Jeff Jordan, U.S. Agent</a> (1947)
+<li><a href="DSPublishing9.jpg">Let's Pretend</a> (1950)
+<li><a href="DSPublishing10.jpg">Moe &amp; Shmoe</a> (1948)
+<li><a href="DSPublishing11.jpg">Outlaws</a> (1948)
+<li><a href="DSPublishing12.jpg">Pay-Off</a> (1948)
+<li><a href="DSPublishing13.jpg">Public Enemies</a> (1948)
+<li><a href="DSPublishing14.jpg">Roundup</a> (1948)
 <li><a href="../SelectDetective/SelectDetective.html">Select Detective</a> (1948)
-<li>Tex Farrell (1948)
-<li>Underworld (1948)
-<li>Whodunit (1948)
+<li><a href="DSPublishing16.jpg">Tex Farrell</a> (1948)
+<li><a href="DSPublishing17.jpg">Underworld</a> (1948)
+<li><a href="DSPublishing18.jpg">Whodunit</a> (1948)
 
 </p>
 
