--- a/index.html
+++ b/index.html
@@ -17150,6 +17150,13 @@
 </tr>
 
 <tr>
+<td>Breeze Lawson, Sky Sheriff</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brenda Starr</td>
 <td>1947</td>
 <td>Four Star</td>
@@ -22012,6 +22019,13 @@
 </tr>
 
 <tr>
+<td>Circus Comics</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cisco Kid</td>
 <td>1950</td>
 <td>Dell</td>
@@ -26174,7 +26188,7 @@
 </tr>
 
 <tr>
-<td>D. S. Publishing</td>
+<td>D.S. Publishing</td>
 <td>1947</td>
 <td>Publisher</td>
 <td><a href="DSPublishing/DSPublishing.html">Details</a></td>
@@ -33877,6 +33891,20 @@
 </tr>
 
 <tr>
+<td>Elsie The Cow Comics</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elsie The Cow Comics For Boys And Girls</td>
+<td>1957</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Elsinore</td>
 <td>2005</td>
 <td>Alias</td>
@@ -34815,6 +34843,13 @@
 </tr>
 
 <tr>
+<td>Everyday Birthday Fun With Elsie The Cow</td>
+<td>1957</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Everyman</td>
 <td>1991</td>
 <td>Epic</td>
@@ -35176,6 +35211,13 @@
 <td>2010</td>
 <td>Capstone</td>
 <td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Exposed</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40284,6 +40326,13 @@
 <td>1951</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gangsters Can't Win</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50387,6 +50436,13 @@
 </tr>
 
 <tr>
+<td>Jeff Jordan, U.S. Agent</td>
+<td>1947</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jeff Lemire</td>
 <td>1976</td>
 <td>Creator</td>
@@ -55878,6 +55934,13 @@
 <td>1990</td>
 <td>Eternity</td>
 <td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Let's Pretend</td>
+<td>1950</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -63152,6 +63215,13 @@
 </tr>
 
 <tr>
+<td>Moe And Shmoe</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Moebius</td>
 <td>1987</td>
 <td>Epic</td>
@@ -68785,6 +68855,13 @@
 </tr>
 
 <tr>
+<td>Outlaws</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Outlaws Of The Wild West</td>
 <td>1952</td>
 <td>Avon</td>
@@ -69657,6 +69734,13 @@
 <td>2007</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pay-Off</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -72824,6 +72908,13 @@
 <td>2019</td>
 <td>First Second</td>
 <td><a href="FirstSecondBooks/FirstSecondBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Public Enemies</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -77009,6 +77100,13 @@
 <td>2017</td>
 <td>Simon And Schuster</td>
 <td><a href="SimonAndSchuster/SimonAndSchuster.html">Details</td>
+</tr>
+
+<tr>
+<td>Roundup</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -88354,6 +88452,13 @@
 </tr>
 
 <tr>
+<td>Tex Farrell</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tex Morgan</td>
 <td>1948</td>
 <td>Marvel</td>
@@ -91602,6 +91707,13 @@
 <td>1994</td>
 <td>Drawn And Quaterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Underworld</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
 </tr>
 
 <tr>
@@ -95576,7 +95688,13 @@
 <td>1996</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
 
+<tr>
+<td>Whodunit</td>
+<td>1948</td>
+<td>D.S. Publishing</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
 </tr>
 
 <tr>
