--- a/index.html
+++ b/index.html
@@ -28280,6 +28280,13 @@
 </tr>
 
 <tr>
+<td>Dearfield Publishing</td>
+<td>1946</td>
+<td>Publisher</td>
+<td><a href="DearfieldPublishing/DearfieldPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Death And The Girls</td>
 <td>2015</td>
 <td>Blank Slate</td>
@@ -29921,6 +29928,13 @@
 <td>1953</td>
 <td>Lev Gleason</td>
 <td><a href="LevGleason/LevGleason.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dimension Graphics</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="DimensionGraphics/DimensionGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33748,6 +33762,13 @@
 <td>1985</td>
 <td>Epic</td>
 <td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elftrek</td>
+<td>1986</td>
+<td>Dimension Graphics</td>
+<td><a href="DimensionGraphics/DimensionGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44703,6 +44724,13 @@
 </tr>
 
 <tr>
+<td>Happy Birthday Gnatrat</td>
+<td>1986</td>
+<td>Dimension Graphics</td>
+<td><a href="DimensionGraphics/DimensionGraphics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Happy Birthday Martha Washington</td>
 <td>1995</td>
 <td>Dark Horse</td>
@@ -46394,6 +46422,13 @@
 <td>1992</td>
 <td>Heroic</td>
 <td><a href="HeroicPublishing/HeroicPublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heroman</td>
+<td>1986</td>
+<td>Dimension Graphics</td>
+<td><a href="DimensionGraphics/DimensionGraphics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -79162,6 +79197,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="SecretDefenders/SecretDefenders.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Secret Doors</td>
+<td>1986</td>
+<td>Dimension Graphics</td>
+<td><a href="DimensionGraphics/DimensionGraphics.html">Details</a></td>
 </tr>
 
 <tr>
