heavy metal movie

--- a/HeavyMetal/HeavyMetal.html
+++ b/HeavyMetal/HeavyMetal.html
@@ -4,12 +4,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Heavy Metal</title>
+<title>Heavy Metal Magazine</title>
 </head>
 
 <body>
-<img src="HeavyMetalLogo.jpg"> <br>
-295 issues from 1977 to 2019 by HM Publications, 1 Movie in 1981 by Columbia Pictures
+<img src="HeavyMetal001.jpg">
 <p>
 <div class="row">
 <div class="column">
@@ -409,9 +408,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Heavy Metal is a 1981 Canadian-American adult animated sci-fi-fantasy film directed by Gerald Potterton, produced by Ivan Reitman and Leonard Mogel, who also was the publisher of Heavy Metal magazine, which was the basis for the film, and starring the voices of Rodger Bumpass, Jackie Burroughs, John Candy, Joe Flaherty, Don Francks, Martin Lavut, Marilyn Lightstone, Eugene Levy, Alice Playten, Harold Ramis, Percy Rodriguez, Susan Roman, Richard Romanus, August Schellenberg, John Vernon, and Zal Yanovsky. The screenplay was written by Daniel Goldberg and Len Blum.
-</p><p>
-Dubbed "The adult illustrated fantasy magazine," Heavy Metal also publishes tales of horror, science fiction, and adventure. It is an American science fiction and fantasy comics magazine, known primarily for its blend of dark fantasy/science fiction and erotica. In the mid-1970s, while publisher Leonard Mogel was in Paris to jump-start the French edition of National Lampoon, he discovered the French science-fantasy magazine Métal Hurlant which had debuted January 1975. The French title translates literally as "Howling Metal".
+Heavy Metal Magazine, published since 1977 by <a href="../HeavyMetalPublications/HeavyMetalPublications.html">Heavy Metal Publications</a>. It was dubbed "The adult illustrated fantasy magazine" but also publishes tales of horror, science fiction, and adventure. It is an American science fiction and fantasy comics magazine, known primarily for its blend of dark fantasy/science fiction and erotica. In the mid-1970s, while publisher Leonard Mogel was in Paris to jump-start the French edition of National Lampoon, he discovered the French science-fantasy magazine Métal Hurlant which had debuted January 1975. The French title translates literally as "Howling Metal".
 </p><p>
 When Mogel licensed the American version, he chose to rename it, and Heavy Metal began in the U.S. in April 1977 as a glossy, full-color monthly. Initially, it displayed translations of graphic stories originally published in Métal Hurlant, including work by Enki Bilal, Philippe Caza, Guido Crepax, Philippe Druillet, Jean-Claude Forest, Jean Giraud (a.k.a. Moebius) and Milo Manara. The magazine later ran Stefano Tamburini and Tanino Liberatore's ultra-violent RanXerox. Since the color pages had already been shot in France, the budget to reproduce them in the U.S. version was greatly reduced.
 </p><p>
