--- a/index.html
+++ b/index.html
@@ -45662,17 +45662,38 @@
 </tr>
 
 <tr>
-<td>Heavy Metal</td>
+<td>Heavy Metal Publications</td>
 <td>1977</td>
-<td>Metal Mammoth</td>
+<td>Publisher</td>
+<td><a href="HeavyMetalPublications/HeavyMetalPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heavy Metal Magazine</td>
+<td>1977</td>
+<td>Heavy Metal</td>
 <td><a href="HeavyMetal/HeavyMetal.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heavy Metal Movie</td>
+<td>1981</td>
+<td>Columbia Pictures</td>
+<td><a href="HeavyMetalMovie/HeavyMetalMovie.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Heavy Metal Presents Moebius</td>
+<td>1981</td>
+<td>Heavy Metal</td>
+<td><a href="HeavyMetal/HeavyMetalMoebius.jpg">Details</a></td>
 </tr>
 
 <tr>
 <td>Heavy Metal Presents Theodore Sturgeon's More Than Human</td>
 <td>1978</td>
 <td>Simon And Schuster</td>
-<td><a href="SimonAndSchuster/SimonAndSchuster.html">Details</td>
+<td><a href="SimonAndSchuster/SimonSchuster42.jpg">Details</td>
 </tr>
 
 <tr>
@@ -87215,7 +87236,7 @@
 <tr>
 <td>Taarna</td>
 <td>2018</td>
-<td>HeavyMetal</td>
+<td>Heavy Metal</td>
 <td><a href="Taarna/Taarna.html">Details</a></td>
 </tr>
 
