--- a/index.html
+++ b/index.html
@@ -2405,6 +2405,20 @@
 </tr>
 
 <tr>
+<td>Active Images Comics</td>
+<td>2002</td>
+<td>Publisher</td>
+<td><a href="Activeimages/Activeimages.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Active Synapse Comics</td>
+<td>1998</td>
+<td>Publisher</td>
+<td><a href="ActiveSynapse/ActiveSynapse.html">Details</a></td>
+</tr>
+ 
+<tr>
 <td>Activision</td>
 <td>1979</td>
 <td>Publisher</td>
@@ -2438,6 +2452,13 @@
 <td>Atlas</td>
 <td><a href="ActualRomances/actualromances.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Actus Tragicus</td>
+<td>1995</td>
+<td>Publisher</td>
+<td><a href="ActusTragicus/ActusTragicus.html">Details</a></td>
+</tr> 
 
 <tr>
 <td>AD Police</td>
@@ -91486,6 +91507,13 @@
 </tr>
 
 <tr>
+<td>Ultramega</td>
+<td>2021</td>
+<td>Image</td>
+<td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ultraverse Premier</td>
 <td>1993</td>
 <td>Malibu</td>
@@ -95730,6 +95758,13 @@
 <td>1962</td>
 <td>Publisher</td>
 <td><a href="Whitman/Whitman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Whitney Publishing</td>
+<td>1995</td>
+<td>Publisher</td>
+<td><a href="WhitneyPublishing/WhitneyPublishing.html">Details</a></td>
 </tr>
 
 <tr>
