john hagen-brenner

--- a/index.html
+++ b/index.html
@@ -51479,6 +51479,12 @@
 </tr>
 
 <tr>
+<td>John Hagen-Brenner</td>
+<td>1950</td>
+<td>Creator</td>
+<td><a href="JohnHagenBrenner/JohnHagenBrenner.html">Details</a></td>
+
+<tr>
 <td>John Henry: Steel-Drivin' Elf</td>
 <td>2019</td>
 <td>Capstone</td>
