--- a/index.html
+++ b/index.html
@@ -2531,6 +2531,13 @@
 </tr>
 
 <tr>
+<td>Adam's Apple Comics</td>
+<td>1971</td>
+<td>Publisher</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adastra In Africa</td>
 <td>1999</td>
 <td>Fantagraphics</td>
@@ -2552,7 +2559,7 @@
 </tr>
 
 <tr>
-<td>AdHouse Books</td>
+<td>Ad House Books</td>
 <td>2002</td>
 <td>Publisher</td>
 <td><a href="AdHouse/AdHouse.html">Details</a></td>
@@ -21703,6 +21710,13 @@
 <td>1975</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Choice Meats Comics</td>
+<td>1971</td>
+<td>Adam's Apple</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
 </tr>
 
 <tr>
@@ -44962,6 +44976,13 @@
 </tr>
 
 <tr>
+<td>Hard Times</td>
+<td>1971</td>
+<td>Adam's Apple</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hardy Boys</td>
 <td>1970</td>
 <td>Gold Key</td>
@@ -52114,6 +52135,13 @@
 </tr>
 
 <tr>
+<td>Judy Tunafish</td>
+<td>1973</td>
+<td>Adam's Apple</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jughead</td>
 <td>1965</td>
 <td>Archie</td>
@@ -56076,6 +56104,13 @@
 </tr>
 
 <tr>
+<td>Let's Not 'n Say We Did Funnies</td>
+<td>1972</td>
+<td>Adam's Apple</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Letter 44</td>
 <td>2013</td>
 <td>Oni</td>
@@ -56437,6 +56472,13 @@
 <td>1993</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Like Nobody's Bizness</td>
+<td>1972</td>
+<td>Adam's Apple</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
 </tr>
 
 <tr>
@@ -73239,6 +73281,13 @@
 </tr>
 
 <tr>
+<td>Purple Cat</td>
+<td>1973</td>
+<td>Adam's Apple</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Push</td>
 <td>2009</td>
 <td>Wildstorm</td>
@@ -85140,6 +85189,13 @@
 </tr>
 
 <tr>
+<td>Stoned-Out Funnies</td>
+<td>1972</td>
+<td>Adam's Apple</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Stories from Bosnia: Soba</td>
 <td>1998</td>
 <td>Drawn And Quarterly</td>
@@ -87289,6 +87345,13 @@
 </tr>
 
 <tr>
+<td>Tail-Draggers Comix</td>
+<td>1973</td>
+<td>Adam's Apple</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tailspin Comics</td>
 <td>1944</td>
 <td>Spotlight</td>
@@ -88105,6 +88168,13 @@
 <td>1988</td>
 <td>Archie</td>
 <td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Teenage Trash</td>
+<td>1972</td>
+<td>Adam's Apple</td>
+<td><a href="AdamsApple/AdamsApple.html">Details</a></td>
 </tr>
 
 <tr>
