--- a/ActionLab/ActionLab.html
+++ b/ActionLab/ActionLab.html
@@ -101,6 +101,7 @@
 <div class="mySlides" style="text-align: center;"><img src="ActionLab81.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ActionLab82.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ActionLab83.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ActionLab84.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -142,8 +143,9 @@ Titles
 <li><a href="ActionLab27.jpg">Galaxy Man &amp; Cosmic Girl   </a> (2015)
 <li><a href="ActionLab28.jpg">Garlicks   </a> (2015)
 <li><a href="ActionLab29.jpg">Ghost Town </a> (2013)
-<li><a href="ActionLab30.jpg">Ghoul Scouts: I Was a Tweenage Werewolf    </a> (2018)
-<li><a href="ActionLab31.jpg">Ghoul Scouts: Night of the Unliving Undead </a> (2016)
+<li><a href="ActionLab30.jpg">Ghoul Scouts: I Was a Tweenage Werewolf</a> (2018)
+<li><a href="ActionLab31.jpg">Ghoul Scouts: Night of the Unliving Undead</a> (2016)
+<li><a href="ActionLab84.jpg">Going To The Chapel</a> (2019)
 <li><a href="ActionLab32.jpg">Gronk, A Monster's Story   </a> (2015)
 <li><a href="ActionLab33.jpg">Harcourt Legacy    </a> (2017)
 <li><a href="ActionLab34.jpg">Herald Lovecraft and Tesla </a> (2014)
