--- a/AftershockComics/AftershockComics.html
+++ b/AftershockComics/AftershockComics.html
@@ -75,6 +75,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Aftershock55.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aftershock56.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Aftershock57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock58.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -144,6 +145,7 @@ Titles
 <li><a href="Aftershock47.jpg">Shock (2018)
 <li><a href="Aftershock48.jpg">Strayer (2016)
 <li><a href="Aftershock49.jpg">Superzero (2015)
+<li><a href="Aftershock58.jpg">Undone By Blood (2020)
 <li><a href="Aftershock50.jpg">Unholy Grail (2017)
 <li><a href="Aftershock51.jpg">Volition (2018)
 <li><a href="Aftershock52.jpg">Walk Through Hell (2018)
