--- a/Boom!/Boom!.html
+++ b/Boom!/Boom!.html
@@ -462,7 +462,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Boom443.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Boom444.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Boom445.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="Boom446.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -675,8 +675,8 @@ Boom! Studios is an American comic book and graphic novel publisher, headquarter
 <li><a href="Boom202.jpg">Incredibles: City of Incredibles  </a> (2009)
 <li><a href="Boom203.jpg">Incredibles: Family Matters   </a> (2009)
 <li><a href="Boom204.jpg">Incredibles: Revenge from Below   </a> (2010)
-<li><a href="Boom205.jpg">Incredibles: Secrets &amp; Lies   </a> (2010)
-<li><a href="Boom206.jpg">Incredibles: Truth &amp; Consequences </a> (2011)
+<li><a href="Boom205.jpg">Incredibles: Secrets And Lies   </a> (2010)
+<li><a href="Boom206.jpg">Incredibles: Truth And Consequences </a> (2011)
 <li><a href="Boom207.jpg">Insurrection v3.6     </a> (2011)
 <li><a href="../Irredeemable/Irredeemable.html">Irredeemable</a> (2009)
 <li><a href="Boom208.jpg">Jane  </a> (2017)
@@ -699,7 +699,7 @@ Boom! Studios is an American comic book and graphic novel publisher, headquarter
 <li><a href="Boom225.jpg">Klaus     </a> (2015)
 <li><a href="Boom226.jpg">Klaus and the Crisis in Xmasville     </a> (2017)
 <li><a href="Boom227.jpg">Klaus and the Crying Snowman  </a> (2018)
-<li><a href="Boom228.jpg">Klaus and the Life &amp; Times of Joe Christmas </a> (2019)
+<li><a href="Boom228.jpg">Klaus and the Life And Times of Joe Christmas </a> (2019)
 <li><a href="Boom229.jpg">Klaus and the Witch of Winter     </a> (2016)
 <li><a href="Boom230.jpg">Klaus: How Santa Claus Began  </a> (2019)
 <li><a href="Boom231.jpg">Klaus: The New Adventures of Santa Claus  </a> (2018)
@@ -734,10 +734,10 @@ Boom! Studios is an American comic book and graphic novel publisher, headquarter
 <li><a href="Boom260.jpg">Mighty Morphin Power Rangers Free Comic Book Day 2018 Special     </a> (2018)
 <li><a href="Boom261.jpg">Mighty Morphin Power Rangers: Pink    </a> (2016)
 <li><a href="Boom262.jpg">Mighty Morphin Power Rangers: Shattered Grid  </a> (2018)
-<li><a href="Boom263.jpg">Misfit City   </a> (2017)
-<li><a href="Boom264.jpg">Monsters, Inc.: Laugh Factory     </a> (2009)
+<li><a href="Boom263.jpg">Misfit City</a> (2017)
+<li><a href="Boom264.jpg">Monsters, Inc.: Laugh Factory</a> (2009)
 <li><a href="Boom265.jpg">Mouse Guard, Labyrinth and Other Stories   </a> (2014)
-<li><a href="Boom266.jpg">Mouse Guard: Baldwin the Brave &amp; Other Tales  </a> (2014)
+<li><a href="Boom266.jpg">Mouse Guard: Baldwin the Brave And Other Tales</a> (2014)
 <li><a href="Boom267.jpg">Mouse Guard: Legends of the Guard     </a> (2015)
 <li><a href="Boom268.jpg">Mr. Stuffins  </a> (2007)
 <li><a href="Boom269.jpg">Munchkin  </a> (2015)
@@ -754,7 +754,7 @@ Boom! Studios is an American comic book and graphic novel publisher, headquarter
 <li><a href="Boom280.jpg">Nola  </a> (2009)
 <li><a href="Boom281.jpg">North Wind    </a> (2007)
 <li><a href="Boom282.jpg">Oh, Killstrike    </a> (2015)
-<li><a href="Boom283.jpg">Once &amp; Future     </a> (2019)
+<li><a href="Boom283.jpg">Once And Future     </a> (2019)
 <li><a href="Boom284.jpg">Operation: Broken Wings, 1936     </a> (2011)
 <li><a href="Boom285.jpg">Other Sides of Howard Cruse   </a> (2012)
 <li><a href="Boom286.jpg">Over the Garden Wall  </a> (2015)
@@ -819,6 +819,7 @@ Boom! Studios is an American comic book and graphic novel publisher, headquarter
 <li><a href="Boom344.jpg">Snarked   </a> (2011)
 <li><a href="Boom345.jpg">Snow Blind    </a> (2015)
 <li><a href="Boom346.jpg">Soldier Zero  </a> (2010)
+<li><a href="Boom446.jpg">Something Is Killing The Children</a> (2019)
 <li><a href="Boom347.jpg">Sons of Anarchy   </a> (2013)
 <li><a href="Boom348.jpg">Sons of Anarchy: Redwood Original     </a> (2016)
 <li><a href="Boom349.jpg">Space Warped  </a> (2011)
@@ -866,7 +867,7 @@ Boom! Studios is an American comic book and graphic novel publisher, headquarter
 <li><a href="Boom391.jpg">Uncle Scrooge: Ducktales - Like a Hurricane   </a> (2010)
 <li><a href="Boom392.jpg">Uncle Scrooge: DuckTales - Messes Become Successes    </a> (2011)
 <li><a href="Boom393.jpg">Uncle Scrooge: The Hunt for the Old Number One    </a> (2010)
-<li><a href="Boom394.jpg">Uncle Scrooge: The Mysterious Stone Ray &amp; Cash Flow   </a> (2011)
+<li><a href="Boom394.jpg">Uncle Scrooge: The Mysterious Stone Ray And Cash Flow   </a> (2011)
 <li><a href="Boom395.jpg">Unknown   </a> (2009)
 <li><a href="Boom396.jpg">Unknown: The Devil Made Flesh     </a> (2009)
 <li><a href="Boom397.jpg">Unsound   </a> (2017)
@@ -889,7 +890,7 @@ Boom! Studios is an American comic book and graphic novel publisher, headquarter
 <li><a href="Boom414.jpg">Warhammer 40,000: Damnation Crusade   </a> (2006)
 <li><a href="Boom415.jpg">Warhammer 40,000: Defenders of Ultramar   </a> (2008)
 <li><a href="Boom416.jpg">Warhammer 40,000: Exterminatus    </a> (2008)
-<li><a href="Boom417.jpg">Warhammer 40,000: Fire &amp; Honour   </a> (2008)
+<li><a href="Boom417.jpg">Warhammer 40,000: Fire And Honour   </a> (2008)
 <li><a href="Boom418.jpg">Warhammer: Condemned by Fire  </a> (2008)
 <li><a href="Boom419.jpg">Warlords of Appalachia    </a> (2016)
 <li><a href="Boom420.jpg">Welcome Back  </a> (2015)
