--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -530,6 +530,39 @@
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse498.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse499.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse500.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse501.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse502.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse503.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse504.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse505.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse506.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse507.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse508.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse509.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse510.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse511.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse512.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse513.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse514.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse515.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse516.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse517.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse518.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse519.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse520.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse521.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse522.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse523.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse524.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse525.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse526.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse527.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse528.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse529.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse530.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse531.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse532.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse533.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -755,6 +788,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse400.jpg">Briggs Land</a> (2016)
 <li><a href="Darkhorse401.jpg">Brothers Of The Spear Archives</a> (2012)
 <li><a href="../BuffyTheVampireSlayer/BuffyTheVampireSlayer.html">Buffy The Vampire Slayer</a> (2002)
+<li><a href="Darkhorse532.jpg">Butcher Of Paris</a> (2020)
 <li><a href="Darkhorse402.jpg">Buzzard</a> (2010)
 <li><a href="Darkhorse403.jpg">Buzzkill</a> (2013)
 <li><a href="Darkhorse404.jpg">By Bizarre Hands</a> (1994)
@@ -1186,6 +1220,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse265.jpg">Silke</a> (2001)
 <li><a href="../SinCity/SinCity.html">Sin City</a> (1994)
 <li><a href="Darkhorse266.jpg">Skyman</a> (2014)
+<li><a href="Darkhorse533.jpg">Skulldigger and Skeleton Boy</a> (2020)
 <li><a href="Darkhorse267.jpg">Sock Monkey</a> (1998)
 <li><a href="Darkhorse268.jpg">Sock Monkey: The Inches Incident</a> (2007)
 <li><a href="Darkhorse269.jpg">Solomon Kane</a> (2009)
