--- a/OpticNerve/OpticNerve.html
+++ b/OpticNerve/OpticNerve.html
@@ -42,12 +42,15 @@
 <div class="mySlides" style="text-align: center;"><img src="OpticNerve22.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OpticNerve23.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="OpticNerve24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="InkGeek1.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
 Optic Nerve is a comic book series by cartoonist Adrian Tomine. Originally self-published by Tomine in 1991 as a series of mini-comics (which have later been collected in a single volume, 32 Stories), the series has been published by Drawn and Quarterly since 1995.
+</p><p>
+Adrian Tomine also published his other title <a href="InkGeek1.jpg">Ink Geek</a> in 1993.
 </p><p>
 Tomine's style and subject matter are restrained and realistic. Many are set in Northern California. Many of his stories for Optic Nerve feature Asian American characters, including "Hawaiian Getaway," "Six-Day Cold," "Layover," and "Shortcomings." Adrian Tomine is Asian American and lives in Brooklyn, New York. Many topics of his stories are at least partly autobiographical.
 </p><p>
