--- a/index.html
+++ b/index.html
@@ -2566,6 +2566,13 @@
 </tr>
 
 <tr>
+<td>Adhesive Comics</td>
+<td>1992</td>
+<td>Publisher</td>
+<td><a href="AdhesiveComics/AdhesiveComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adler</td>
 <td>2020</td>
 <td>Titan</td>
@@ -2605,6 +2612,13 @@
 <td>2001</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adrian Tomine</td>
+<td>1991</td>
+<td>Publisher</td>
+<td><a href="OpticNerve/OpticNerve.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18410,6 +18424,13 @@
 </tr>
 
 <tr>
+<td>Butcher Of Paris</td>
+<td>2020</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Butterfly</td>
 <td>1904</td>
 <td>Amalgamated</td>
@@ -19114,6 +19135,13 @@
 <td>1941</td>
 <td>Temerson</td>
 <td><a href="CaptainAero/CaptainAero.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Africa</td>
+<td>1992</td>
+<td>African Prince</td>
+<td><a href="CaptainAfrica/CaptainAfrica.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33240,6 +33268,13 @@
 </tr>
 
 <tr>
+<td>Eden Matrix</td>
+<td>1994</td>
+<td>Adhesive</td>
+<td><a href="AdhesiveComics/AdhesiveComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eden's Trail</td>
 <td>2005</td>
 <td>Marvel</td>
@@ -35428,6 +35463,13 @@
 <td>2017</td>
 <td>Dark Horse</td>
 <td><a href="EyeballKid/EyeballKid.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eyebeam - The Trilogy</td>
+<td>1994</td>
+<td>Adhesive</td>
+<td><a href="AdhesiveComics/AdhesiveComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42286,6 +42328,13 @@
 <td>2009</td>
 <td>Viz</td>
 <td><a href="Viz/Viz.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Going To The Chapel</td>
+<td>2019</td>
+<td>Action Lab</td>
+<td><a href="ActionLab/ActionLab.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49894,6 +49943,13 @@
 <td>1992</td>
 <td>Marvel</td>
 <td><a href="J2/J2.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jab</td>
+<td>1992</td>
+<td>Adhesive</td>
+<td><a href="AdhesiveComics/AdhesiveComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -69288,6 +69344,13 @@
 </tr>
 
 <tr>
+<td>Pal-Yat-Chee</td>
+<td>1993</td>
+<td>Adhesive</td>
+<td><a href="AdhesiveComics/AdhesiveComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Palace Of Champions</td>
 <td>2016</a>
 <td>Conundrum Press</td>
@@ -78500,6 +78563,13 @@
 </tr>
 
 <tr>
+<td>Scarlet Fox</td>
+<td>2002</td>
+<td>Aerosol Press</td>
+<td><a href="ScarletFox/ScarletFox.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scarlet Kiss: The Vampyre</td>
 <td>1990</td>
 <td>Innovation</td>
@@ -81752,6 +81822,13 @@
 </tr>
 
 <tr>
+<td>Skulldigger and Skeleton Boy</td>
+<td>2020</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Skunk</a>
 <td>1993</td>
 <td>MU Press</td>
@@ -82694,6 +82771,13 @@
 <td>1986</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Something Is Killing The Children</td>
+<td>2019</td>
+<td>Boom!</td>
+<td><a href="Boom!/Boom!.html">Details</a></td>
 </tr>
 
 <tr>
@@ -89935,10 +90019,24 @@
 </tr>
 
 <tr>
-<td>Too Mush Coffee Man</td>
+<td>Too Much Coffee Man</td>
+<td>1993</td>
+<td>Adhesive</td>
+<td><a href="AdhesiveComics/AdhesiveComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Too Much Coffee Man</td>
 <td>2011</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Too Much Coffee Man Color Special</td>
+<td>1996</td>
+<td>Adhesive</td>
+<td><a href="AdhesiveComics/AdhesiveComics.html">Details</a></td>
 </tr>
 
 <tr>
