--- a/index.html
+++ b/index.html
@@ -73721,6 +73721,13 @@
 </tr>
 
 <tr>
+<td>Prize Publications</td>
+<td>1940</td>
+<td>Publisher</td>
+<td><a href="PrizePublications/PrizePublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Prodigy</td>
 <td>2018</td>
 <td>Image</td>
@@ -86758,7 +86765,7 @@
 <tr>
 <td>Strange World Of Your Dreams</td>
 <td>1952</td>
-<td>Prize Publications</td>
+<td>Prize</td>
 <td><a href="StrangeWorldOfYourDreams/StrangeWorldOfYourDreams.html">Details</a></td>
 </tr>
 
