--- a/Innovation/Innovation.html
+++ b/Innovation/Innovation.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Innovation</title>
+<title>Innovation Comics</title>
 </head>
 
 <body>
-<b>Innovation</b>
+<img src="Innovation2.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
